# lab_5

./: config.py  pyproject.toml
app/: __init__.py  models.py  views.py
migrations/: env.py
migrations/versions/: 11f16b5a4b7c_init_migration.py
