[tool.poetry]
name = "5mpro"
version = "0.1.0"
description = ""
authors = ["qweszxad <qweszxad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask-sqlalchemy = "^3.0.5"
flask = "^2.3.2"
flask-migrate = "^4.0.4"
python-dotenv = "^1.0.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"